deploy/consul/consul-api-gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: api-gateway
  namespace: consul
  annotations:
    cert-manager.io/issuer: hacky-issuer
spec:
  gatewayClassName: consul
  listeners:
  - hostname: hacky-app.wjlabs.xyz
    protocol: HTTPS
    port: 443
    name: https
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
        - name: hacky-app-wjlabs-xyz-tls
          namespace: consul
          kind: Secret
          group: core
  # - protocol: HTTP
  #   port: 80
  #   name: http
  #   allowedRoutes:
  #     namespaces:
  #       from: All
